--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ html {
 /* ===== 히어로 섹션 ===== */
 .hero {
     /* 풀스크린 히어로: 지정 이미지 크게 표시 */
-    background-image: url('https://disneyparksblog.com/app/uploads/2025/03/2025-WDW-Facts-to-Quiz-Your-Friends-On-8.jpg');
+    background-image: url('https://i.postimg.cc/QMvGWTqp/theme-park-hero-night.jpg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
