🖼️ 히어로 이미지를 로컬 파일로 변경
- CORS 문제 해결을 위해 이미지를 저장소에 직접 저장
- 선택하신 성 이미지(hero-castle.jpg) 추가
- 안정적인 로딩 보장

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ html {
 /* ===== 히어로 섹션 ===== */
 .hero {
     /* 풀스크린 히어로: 지정 이미지 크게 표시 */
-    background-image: url('https://images.unsplash.com/photo-1546146830-2cca9512c68e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2128&q=80');
+    background-image: url('images/hero-castle.jpg');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
